--- a/bugtracker/package.json
+++ b/bugtracker/package.json
@@ -14,10 +14,13 @@
     "react-alert": "^7.0.1",
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-file-viewer": "^0.5.0",
+    "react-player": "^2.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.1",
+    "react-timeago": "^4.4.0",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
