--- a/bugtracker/package.json
+++ b/bugtracker/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^20.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "html-react-parser": "^0.13.0",
+    "lodash": "^4.17.19",
     "moment": "^2.26.0",
     "prismic-reactjs": "^1.3.1",
     "query-string": "^5.1.1",
@@ -14,12 +18,13 @@
     "react-alert": "^7.0.1",
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-file-viewer": "^0.5.0",
+    "react-file-viewer": "^1.2.1",
+    "react-html-parser": "^2.0.2",
     "react-player": "^2.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "react-timeago": "^4.4.0",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
